--- a/style.css
+++ b/style.css
@@ -1,28 +1,199 @@
-#elsoKep {
-    max-width: 2000px;
-    margin-left: 500px;
-    margin-right: 500px;
+body {
+    background-image: linear-gradient(to left, gray, white, rgba(128, 128, 128, 0.555));
     margin-top: 200px;
-    width: 650px;
-    height: 300px;
+    max-width: 2000px;
 }
 
-#arrow {
-    max-width: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 1100px;
-    padding-bottom: 135px;
-    display: flex
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
-#arrow2 {
-    max-width: 50px;
-    display: flex;
+* {box-sizing:border-box}
+
+#kep {
+    width: 550px;
+    height: 250px;
+    margin-left: 225px;
+    margin-right: auto;
+    box-shadow: 0px 0px 10px 2px black;
+}
+
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -285px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 35px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 230px;
+  border-radius: 3px 0 0 3px;
+  color: rgb(61, 61, 61)
+}
+
+.prev {
+    left: 230px;
+    border-radius: 3px 0 0 3px;
+    color: rgb(61, 61, 61)
+}
+
+.grey {
+    position: relative;
+    width: 60px;
+    height: 250px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -175px;
-    padding-left: 600px;
-    padding-bottom: -50px;
-    transform: rotate(0.5turn);
+    bottom: 255px;
+    right: 245px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px 2px black;
+}
+
+.grey2 {
+    position: relative;
+    width: 60px;
+    height: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 505px;
+    left: 245px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px 2px black;
+}
+
+
+.prev:hover, .next:hover {
+  color: rgba(128, 128, 128, 0.521);
+}
+
+#photo-title {
+  color: #f2f2f2;
+  position: absolute;
+  left: 300px;
+  bottom: 550px;
+  width: 100%;
+}
+
+#photo-description {
+    color: #f2f2f2;
+    position: absolute;
+    left: 300px;
+    bottom: 525px;
+  }
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+#kep1 {
+  position: relative;
+  cursor: pointer;
+  height: 75px;
+  width: 100px;
+  background-color: #bbb;
+  top: -400px;
+  display: inline-block;
+  box-shadow: 0px 0px 10px 2px black;
+}
+
+.title {
+    display: none;
+    position: relative;
+    background: grey;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    top: -50px;
+}
+
+.title2 {
+    display: none;
+    position: relative;
+    background: grey;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    top: -50px;
+}
+
+.title3 {
+    display: none;
+    position: relative;
+    background: grey;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    top: -50px;
+}
+
+.title4 {
+    display: none;
+    position: relative;
+    background: grey;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    top: -50px;
+}
+
+.title5 {
+    display: none;
+    position: relative;
+    background: grey;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    top: -50px;
+}
+  
+#thumbs:hover .title {
+    display:block;
+    top: -500px;
+    margin-left: 650px;
+    margin-right: 650px;
+}
+
+#thumbs:hover .title2 {
+    display:block;
+    top: -500px;
+    margin-left: 650px;
+    margin-right: 650px;
+}
+
+#thumbs:hover .title3 {
+    display:block;
+    top: -500px;
+    margin-left: 650px;
+    margin-right: 650px;
+}
+
+#thumbs:hover .title4 {
+    display:block;
+    top: -500px;
+    margin-left: 650px;
+    margin-right: 650px;
+}
+
+#thumbs:hover .title5 {
+    display:block;
+    top: -500px;
+    margin-left: 650px;
+    margin-right: 650px;
 }
