--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
 * {box-sizing:border-box}
 
 #kep {
-    width: 550px;
+    width: 750px;
     height: 250px;
-    margin-left: 225px;
+    margin-left: 125px;
     margin-right: auto;
     box-shadow: 0px 0px 10px 2px black;
 }
@@ -33,8 +33,9 @@ body {
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -285px;
+  margin-top: -245px;
   padding: 16px;
+  padding-left: -500px;
   color: white;
   font-weight: bold;
   font-size: 35px;
@@ -43,13 +44,13 @@ body {
 }
 
 .next {
-  right: 230px;
+  right: 125px;
   border-radius: 3px 0 0 3px;
   color: rgb(61, 61, 61)
 }
 
 .prev {
-    left: 230px;
+    left: 125px;
     border-radius: 3px 0 0 3px;
     color: rgb(61, 61, 61)
 }
@@ -61,9 +62,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     bottom: 255px;
-    right: 245px;
+    right: 350px;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 10px 2px black;
+    box-shadow: 0px 0px 2.5px 2px black;
 }
 
 .grey2 {
@@ -73,9 +74,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     bottom: 505px;
-    left: 245px;
+    left: 350px;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 10px 2px black;
+    box-shadow: 0px 0px 2.5px 2px black;
 }
 
 
@@ -86,7 +87,7 @@ body {
 #photo-title {
   color: #f2f2f2;
   position: absolute;
-  left: 300px;
+  left: 200px;
   bottom: 550px;
   width: 100%;
 }
@@ -94,7 +95,7 @@ body {
 #photo-description {
     color: #f2f2f2;
     position: absolute;
-    left: 300px;
+    left: 200px;
     bottom: 525px;
   }
 
@@ -129,7 +130,8 @@ body {
     background: grey;
     color: white;
     border-radius: 5px;
-    padding: 5px;
+    padding: 4.75px;
+    left: 10px;
     top: -50px;
 }
 
@@ -139,7 +141,8 @@ body {
     background: grey;
     color: white;
     border-radius: 5px;
-    padding: 5px;
+    padding: 4.75px;
+    left: 10px;
     top: -50px;
 }
 
@@ -149,7 +152,8 @@ body {
     background: grey;
     color: white;
     border-radius: 5px;
-    padding: 5px;
+    padding: 4.75px;
+    left: 10px;
     top: -50px;
 }
 
@@ -159,41 +163,76 @@ body {
     background: grey;
     color: white;
     border-radius: 5px;
-    padding: 5px;
+    padding: 4.75px;
+    left: 10px;
     top: -50px;
 }
   
-#thumbs:hover .title {
-    display:block;
+#kepek1:hover .title {
+    position: relative;
+    display:inline;
     top: -500px;
-    margin-left: 650px;
-    margin-right: 650px;
+    margin-left: -131px;
+    margin-right: 0px;
+    left: 15px;
+    padding-right: 5px;
 }
 
-#thumbs:hover .title2 {
-    display:block;
+#kepek2:hover .title2 {
+    position: relative;
+    display:inline-block;
     top: -500px;
-    margin-left: 650px;
-    margin-right: 650px;
+    margin-left: -130px;
+    margin-right: 0px;
 }
 
-#thumbs:hover .title3 {
-    display:block;
+#kepek3:hover .title3 {
+    position: relative;
+    display:inline-block;
     top: -500px;
-    margin-left: 650px;
-    margin-right: 650px;
+    margin-left: -130px;
+    margin-right: 0px;
 }
 
-#thumbs:hover .title4 {
-    display:block;
+#kepek4:hover .title4 {
+    position: relative;
+    display:inline-block;
     top: -500px;
-    margin-left: 650px;
-    margin-right: 650px;
+    margin-left: -130px;
+    margin-right: 0px;
 }
 
-#thumbs:hover .title5 {
-    display:block;
+#kepek5:hover .title5 {
+    position: reslative;
+    display:inline-block;
     top: -500px;
-    margin-left: 650px;
-    margin-right: 650px;
+    margin-left: -130px;
+    margin-right: 0px;
+}
+
+#kepek1, #kepek2, #kepek3, #kepek4, #kepek5 {
+    display: inline;
+    margin-left: 5px;
+    left: 0px;
+    right: 0px;
+    max-width: 500px;
+}
+
+#kozep {
+    max-width: 1000px;
+    left: 0px;
+    right: 0px;
+    margin-left: 577.5px;
+    margin-top: -100px;
+}
+
+#leiras {
+    position: relative;
+    margin-left: 180px;
+    bottom: -250px;
+    padding-top: 90px;
+    padding-right: 100px;
+    width: 650px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.678);
 }
